--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
+    "simplex-noise": "^4.0.3",
     "tailwind-merge": "^3.4.0",
     "tailwind-scrollbar": "^4.0.2"
   },
